--- a/javascript/200805/index.html
+++ b/javascript/200805/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="arraymethod.js"></script>
+    <!-- <script src="arraymethod.js"></script>-->
+    <script defer src="button.js"></script>
 </head>
 <body>
-    
+    <input type="button" id="hw" value="Hello world">
 </body>
 </html>
